--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to DSA with SCS in JS</h1>
-    <script src="./sum.js"></script>
+    <script src="./swapTwoNumbers.js"></script>
 </body>
 </html>
