--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to DSA with SCS in JS</h1>
-    <script src="./swapTwoNumbers.js"></script>
+    <h1>Welcome to DSA Prep...</h1>
+    <script src="./removeLastNum.js"></script>
 </body>
 </html>
