--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to DSA Prep...</h1>
-    <script src="./removeLastNum.js"></script>
+    <script src="./sum&coercion.js"></script>
 </body>
 </html>
